--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <script defer src="script/app.js"></script>
 
-  <title>FS Engenharia Rural | Consultoria, Crédito e Regularização</title>
+  <title>FS Engenharia Rural - Consultoria, Crédito e Regularização</title>
 </head>
 
 <body>
@@ -41,7 +41,7 @@
 
         <div class="nav-container-flex">
           <div class="nav-btn-container">
-            <a href="#container-form" class="btn-nav-contato">Solicitar Orçamento</a>
+            <a href="#container-form" class="btn-nav-contato btn-primary-yellow">Solicitar Orçamento</a>
           </div>
 
           <button class="navbar-toggle-s" aria-label="Abrir menu">
@@ -65,7 +65,7 @@
       <div class="hero-content">
         <h1>Precisão que impulsiona sua produção</h1>
         <p>Mapeamos sua terra com tecnologia e experiência para produzir com segurança.</p>
-        <a href="#contato" class="hero-btn">Fale com um especialista</a>
+        <a href="#contato" class="hero-btn btn-primary-yellow">Fale com um especialista</a>
       </div>
     </section>
   </header>
