fix: Incluindo novas imagens

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <h1>Nossos serviços</h1>
         <section class="cards">
           <article class="card">
-            <img class="card-img-top" src="img/geo.jpeg" alt="Imagem representando georreferenciamento de imóveis">
+            <img class="card-img-top" src="img/card-car.jpeg" alt="Imagem representando georreferenciamento de imóveis">
             <div>
               <h5 class="card-text">Georreferenciamento de Imóveis</h5>
               <p class="card-description">
@@ -168,7 +168,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img-top" src="img/geo.jpeg" alt="Imagem representando crédito rural">
+            <img class="card-img-top" src="img/card-credito-rural.png" alt="Imagem representando crédito rural">
             <div>
               <h5 class="card-text">Crédito Rural</h5>
               <p class="card-description">
@@ -179,7 +179,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img-top" src="img/geo.jpeg" alt="Imagem representando serviço de topografia">
+            <img class="card-img-top" src="img/card-topografia.png" alt="Imagem representando serviço de topografia">
             <div>
               <h5 class="card-text">Topografia</h5>
               <p class="card-description">
@@ -190,7 +190,7 @@
           </article>
 
           <article class="card">
-            <img class="card-img-top" src="img/geo.jpeg" alt="Imagem representando o serviço LAR">
+            <img class="card-img-top" src="img/card-lar.png" alt="Imagem representando o serviço LAR">
             <div>
               <h5 class="card-text">LAR</h5>
               <p class="card-description">
