refactors: Regatorando css, apando propriedades não necessárias e incorporando o que pode ser

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="description"
-    content="Consultoria rural no oeste do Pará. Crédito rural, georreferenciamento, licenciamento ambiental e regularização de imóveis." />
+    content="Consultoria rural no oeste do Pará especializada em crédito rural, georreferenciamento, licenciamento ambiental e regularização de imóveis, 
+                  oferecendo soluções técnicas seguras para valorizar e desenvolver propriedades rurais." />
 
   <meta property="og:title" content="FS Engenharia Rural">
   <meta property="og:description" content="Consultoria rural, crédito e regularização fundiária.">
@@ -63,8 +64,8 @@
       <div class="hero-overlay"></div>
 
       <div class="hero-content">
-        <h1>Precisão que impulsiona sua produção</h1>
-        <p>Mapeamos sua terra com tecnologia e experiência para produzir com segurança.</p>
+        <h1>Especialistas em regularização fundiária e ambiental de imóveis rurais, com soluções técnicas seguras e eficientes.</h1>
+        <p>Atuação técnica, estratégica e transparente para quem busca segurança, regularidade e tranquilidade na produção rural.</p>
         <a href="#contato" class="hero-btn btn-primary-yellow">Fale com um especialista</a>
       </div>
     </section>
@@ -148,7 +149,7 @@
           topografia, consultoria técnica e apoio especializado para acesso ao crédito rural. Com uma equipe
           capacitada e conhecimento do campo, ajudamos produtores a conquistar recursos e a tomar decisões
           seguras para o crescimento sustentável de suas propriedades.</p>
-        <a href="#contato">
+        <a href="#contato" class="btn-primary-yellow">
           Fale com um especialista
         </a>
       </section>
@@ -358,7 +359,7 @@
       <div id="footer_contacts">
         <div class="footer-logo">
           <img src="img/fs-engenharia-logo.png" alt="Fs Engenharia-logo">
-          <h1>Engenharia</h1>
+          <h2>Engenharia</h2>
         </div>
         <p>Mais que consultoria, somos parceiros do produtor rural na busca por resultados sólidos e sustentáveis.</p>
 
