menu âncora na barra da navbar e footer funcionando

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
           </button>
 
           <ul class="navbar-menu-s">
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Serviços</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#service">Serviços</a></li>
+            <li><a href="#contact">Contato</a></li>
           </ul>
         </div>
 
       </div>
     </nav>
 
-    <section class="hero">
+    <section id="home" class="hero">
       <div class="hero-overlay"></div>
 
       <div class="hero-content">
@@ -74,7 +74,7 @@
   <main>
     <div class="container">
       <section id="container_descricao">
-        <section>
+        <section id="about">
           <h1>Sobre</h1>
           <h2>FS Engenharia</h2>
           <p>
@@ -154,7 +154,7 @@
         </a>
       </section>
 
-      <section>
+      <section id="service">
         <h1>Nossos serviços</h1>
         <section class="cards">
           <article class="card">
@@ -267,7 +267,7 @@
   </main>
 
   <!--SECAO ENTRE EM CONTATO-->
-  <div class="container-form">
+  <div id="contact" class="container-form">
     <div class="container-formulario">
       <div class="form-content-left" id="form-content-left">
         <div class="form-image">
@@ -381,16 +381,16 @@
       <ul class="footer-list">
         <h3>Navegação</h3>
         <li class="footer-list-item">
-          <a href="#" class="footer-link">Home</a>
+          <a href="#home" class="footer-link">Home</a>
         </li>
         <li class="footer-list-item">
-          <a href="#" class="footer-link">Sobre</a>
+          <a href="#about" class="footer-link">Sobre</a>
         </li>
         <li class="footer-list-item">
-          <a href="#" class="footer-link">Contatos</a>
+          <a href="#service" class="footer-link">Serviços</a>
         </li>
         <li class="footer-list-item">
-          <a href="#" class="footer-link">Serviços</a>
+          <a href="#contact" class="footer-link">Contatos</a>
         </li>
       </ul>
 
