ancoras do slide incial e fale com espeicialista sendo direcionados certamente

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="hero-content">
         <h1>Especialistas em regularização fundiária e ambiental de imóveis rurais, com soluções técnicas seguras e eficientes.</h1>
         <p>Atuação técnica, estratégica e transparente para quem busca segurança, regularidade e tranquilidade na produção rural.</p>
-        <a href="#contato" class="hero-btn btn-primary-yellow">Fale com um especialista</a>
+        <a href="#contact" class="hero-btn btn-primary-yellow">Fale com um especialista</a>
       </div>
     </section>
   </header>
@@ -149,7 +149,7 @@
           topografia, consultoria técnica e apoio especializado para acesso ao crédito rural. Com uma equipe
           capacitada e conhecimento do campo, ajudamos produtores a conquistar recursos e a tomar decisões
           seguras para o crescimento sustentável de suas propriedades.</p>
-        <a href="#contato" class="btn-primary-yellow">
+        <a href="#contact" class="btn-primary-yellow">
           Fale com um especialista
         </a>
       </section>
