--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <!-- link do Swiperjs CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"/>
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -156,51 +159,67 @@
 
       <section id="service">
         <h1>Nossos serviços</h1>
-        <section class="cards">
-          <article class="card">
-            <img class="card-img-top" src="img/card-car.jpeg" alt="Imagem representando georreferenciamento de imóveis">
-            <div>
-              <h5 class="card-text">Georreferenciamento de Imóveis</h5>
-              <p class="card-description">
-                Levantamento topográfico preciso para certificação de imóveis rurais junto aos órgãos competentes,
-                atendendo às exigências do Incra.
-              </p>
-            </div>
-          </article>
-
-          <article class="card">
-            <img class="card-img-top" src="img/card-credito-rural.png" alt="Imagem representando crédito rural">
-            <div>
-              <h5 class="card-text">Crédito Rural</h5>
-              <p class="card-description">
-                Elaboração de projetos técnicos para acesso a linhas de crédito rural, fomentando o crescimento
-                sustentável da produção agropecuária.
-              </p>
-            </div>
-          </article>
-
-          <article class="card">
-            <img class="card-img-top" src="img/card-topografia.png" alt="Imagem representando serviço de topografia">
-            <div>
-              <h5 class="card-text">Topografia</h5>
-              <p class="card-description">
-                Serviços de medição, levantamento planialtimétrico e demarcação de terrenos, essenciais para
-                planejamento e gestão rural eficiente.
-              </p>
-            </div>
-          </article>
-
-          <article class="card">
-            <img class="card-img-top" src="img/card-lar.png" alt="Imagem representando o serviço LAR">
-            <div>
-              <h5 class="card-text">LAR</h5>
-              <p class="card-description">
-                Regularização fundiária completa com foco na legalização de imóveis rurais e acesso às políticas
-                públicas de desenvolvimento do campo.
-              </p>
-            </div>
-          </article>
-        </section>
+        <div class="card-sec swiper">
+        <div class="card-wrapper">
+            <ul class="card-list swiper-wrapper">
+                <li class="card-item swiper-slide">
+                    <a href="#" class="card-link">
+                        <img src="./img/card-car.jpeg" alt="Card Image">
+                        <div class="content">
+                            <h3>Georreferenciamento de Imóveis</h3>
+                            <p>Levantamento topográfico preciso para certificação de imóveis rurais junto aos órgãos competentes,
+                            atendendo às exigências do Incra.</p>
+                            <div class="link-btn">
+                                <a href="#"><i class="ri-arrow-right-line"></i></a>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="card-item swiper-slide">
+                    <a href="#" class="card-link">
+                        <img src="./img/card-credito-rural.png" alt="Card Image">
+                        <div class="content">
+                            <h3>Crédito Rural.</h3>
+                            <p>Elaboração de projetos técnicos para acesso a linhas de crédito rural, fomentando o crescimento
+                            sustentável da produção agropecuária.</p>
+                            <div class="link-btn">
+                                <a href="#"><i class="ri-arrow-right-line"></i></a>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="card-item swiper-slide">
+                    <a href="#" class="card-link">
+                        <img src="img/card-topografia.png" alt="Card Image">
+                        <div class="content">
+                            <h3>Topografia</h3>
+                            <p>Serviços de medição, levantamento planialtimétrico e demarcação de terrenos, essenciais para
+                            planejamento e gestão rural eficiente.</p>
+                            <div class="link-btn">
+                                <a href="#"><i class="ri-arrow-right-line"></i></a>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="card-item swiper-slide">
+                    <a href="#" class="card-link">
+                        <img src="img/card-lar.png" alt="Card Image">
+                        <div class="content">
+                            <h3>LAR</h3>
+                            <p>Regularização fundiária completa com foco na legalização de imóveis rurais e acesso às políticas
+                            públicas de desenvolvimento do campo.</p>
+                            <div class="link-btn">
+                                <a href="#"><i class="ri-arrow-right-line"></i></a>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+    </div>
       </section>
 
       <section>
@@ -427,9 +446,13 @@
   <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
+
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
+  
+  <!-- link do Swiperjs script -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
 
   <script async src="//www.instagram.com/embed.js"></script>
 
