--- a/index.html
+++ b/index.html
@@ -19,17 +19,24 @@
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <!-- link do Swiperjs CSS -->
+  <!-- link do Swiperjs CSS Cdn -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"/>
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap CSS Cdn -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  
+   <!-- Link do RemixIcon -->
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+
 
   <link rel="icon" href="favicon.png" type="image/png">
 
+  <!-- Link do CSS do Proprio Site -->
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/style_slide.css" rel="stylesheet"/>
 
+  <!-- Links Js do Proprio Site -->
   <script defer src="script/app.js"></script>
 
   <title>FS Engenharia Rural - Consultoria, Crédito e Regularização</title>
@@ -157,9 +164,9 @@
         </a>
       </section>
 
-      <section id="service">
-        <h1>Nossos serviços</h1>
-        <div class="card-sec swiper">
+      <section id="service" class="container-service swiper">
+        <h2>Nossos serviços</h2>
+        <div class="card-sec">
         <div class="card-wrapper">
             <ul class="card-list swiper-wrapper">
                 <li class="card-item swiper-slide">
@@ -299,7 +306,7 @@
       </div>
 
       <div class="form">
-        <form action="#">
+        <form action="#" ">
           <div class="form-header">
             <div class="title">
               <h3>Entre em contato conosco</h3>
@@ -310,9 +317,9 @@
               <label for="firstName">Nome</label>
               <input id="firstName" type="text" name="firstName" placeholder="Digite seu nome" required>
             </div>
-            <div class="input-box">
+            <div class="input-box" ">
               <label for="email">Email</label>
-              <input id="email" type="text" name="mail" placeholder="Digite seu email" required>
+              <input id="email" autocomplete="on" type="text" name="mail" placeholder="Digite seu email" required>
             </div>
             <div class="input-box">
               <label for="city">Cidade</label>
@@ -353,7 +360,7 @@
             </div>
             <div class="input-box">
               <label for="telephone">Telefone</label>
-              <input id="tel" class="form-control" pattern="\(\d{2}\)\s\d{5}-\d{4}" type="tel"
+              <input id="telephone" class="form-control" pattern="\(\d{2}\)\s\d{5}-\d{4}" type="tel"
                 placeholder="Digite seu telefone" maxlength="15" onkeyup="handlePhone(event)" required>
             </div>
             <div class="input-box input-message">
@@ -440,13 +447,13 @@
   </Footer>
 
 
-
-  <!-- Optional JavaScript; choose one of the two! -->
+  <!-- Link do Popper Script -->
 
   <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
 
+  <!-- Link do Bootstrap Script -->
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
